# qagent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  pyproject.toml
backend/: __init__.py  app.py  config.py  db.py  logger.py  mcp_server.py  time_utils.py
docs/: 2026-04-05-historical-backfill-gap-requirements.md  AGENT_GUIDE.md  AGENT_RESEARCH_PATHS.md  README.md  USER_GUIDE.md  agent-collaboration-protocol.md  agent-guide.md  backlog.md  development-plan.md  phase1-acceptance.md  requirements.md  target.md  v2-acceptance.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: backup_data.sh  baseline_3_0.py  e2e_demo.py  migrate_3_0.py  migrate_3_2.py  restore_data.sh  seed_3_0_us_smoke_data.py  smoke_3_0_agent_research.py  smoke_3_0_agent_research_api.py  smoke_3_0_factor_engine.py  smoke_3_0_factor_engine_api.py  smoke_3_0_kernel.py  smoke_3_0_market_data.py  smoke_3_0_market_data_api.py  smoke_3_0_migration.py  smoke_3_0_migration_api.py  smoke_3_0_model_experiment.py  smoke_3_0_model_experiment_api.py  smoke_3_0_portfolio_assets.py  smoke_3_0_portfolio_assets_api.py  smoke_3_0_production_signal.py  smoke_3_0_production_signal_api.py  smoke_3_0_research_api.py  smoke_3_0_strategy_graph.py  smoke_3_0_strategy_graph_api.py  smoke_3_0_universe_dataset.py  smoke_3_0_universe_dataset_api.py  start.sh  start_detached.sh  status.sh  stop.sh  v2_regression_check.py  validate_schema_migration.py
tests/: test_agent_research_3_service.py  test_backtest_diagnostics_contracts.py  test_backtest_engine_contracts.py  test_db_preflight.py  (+45 more)
(+224 files in other folders)
